# watresearch-web

./: CONTRIBUTING.md  README.md
backend/: .env.example  auth.py  config.py  database.py  main.py  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: b5ac30dd5966_create_blogs_table.py
backend/api/v1/: router.py
backend/api/v1/blogs/: router.py  service.py
backend/app/: admin.py  auth.py  config.py  database.py  main.py
backend/app/api/v1/blogs/: router.py  schemas.py  service.py
backend/app/models/: blog.py
backend/models/: blog.py
backend/templates/sqladmin/: layout.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: blog.ts  client.ts
frontend/src/components/: BlogPostLayout.tsx  Math.tsx  NavBar.tsx  ThemeToggle.tsx
frontend/src/content/: registry.ts
frontend/src/content/posts/: example-post.tsx  index.ts
frontend/src/content/posts/mdlm/: DifficultyDemo.tsx  ForwardProcessDemo.tsx  ForwardProcessDiagram.tsx  GenerationComparisonDemo.tsx  InterpolationFormula.tsx  NoiseComparisonDemo.tsx  ResultsChart.tsx  ReverseProcessDemo.tsx  SUBSDemo.tsx  SamplingDemo.tsx  TrainingObjectiveDemo.tsx  TrainingTricksDemo.tsx  index.tsx
frontend/src/content/posts/speculative-decoding/: AutoregressiveDemo.tsx  MemoryBandwidthDemo.tsx  index.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/pages/: Blog.tsx  BlogPost.tsx  Home.tsx  NotFound.tsx  Research.tsx
frontend/src/types/: blog.ts
(+11 files in other folders)
