[project]
name = "watresearch-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "PyJWT",
    "supabase",
    "alembic",
    "sqladmin",
    "itsdangerous",
]
